test/valid/59843_if_then_unit/if_then_unit.mag
-- Author: 59843, Miguel Castelo

-- if-then (no else) sugar of: if exp then exp else unit

fun main (_) : Unit -> Unit =
  var x : Int = 7;
  if x > 6 then print("big");
  if x < 0 then print("negative")